--- a/frtos.ioc
+++ b/frtos.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,8,128,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,8,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;button_task,40,128,Start_button,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F7
@@ -14,14 +14,15 @@ Mcu.IP5=SYS
 Mcu.IPNb=6
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PB0
-Mcu.Pin1=PB14
-Mcu.Pin2=PB7
-Mcu.Pin3=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin4=VP_RTC_VS_RTC_Activate
-Mcu.Pin5=VP_RTC_VS_RTC_Calendar
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin0=PC13
+Mcu.Pin1=PB0
+Mcu.Pin2=PB14
+Mcu.Pin3=PB7
+Mcu.Pin4=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin5=VP_RTC_VS_RTC_Activate
+Mcu.Pin6=VP_RTC_VS_RTC_Calendar
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -53,6 +54,10 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=bled
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=Button
+PC13.Locked=true
+PC13.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -81,7 +86,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.DFSDMFreq_Value=16000000
 RCC.FamilyName=M
